test/tests/compiler/8_loops/valid/extra_credit/switch.plx
#  very simple test of switch statements
pub fn main(none) i32 {
    match 3 {
        -> 0 {
            return 0
        }
        -> 1 {
            return 1
        }
        -> 3 {
            return 3
        }
        -> 5 {
            return 5 }
    }
}
