test/tests/compiler/8_loops/invalid_parse/extra_credit/plx1_with_no_block_2.plx
pub fn main(none) i32 {
    match 3 {
        -> 3
        return 0
    }
}
